# simple-discord-middlware-bot

./: .env.example  .gitignore  Cargo.toml  README.md  TODO.md  licence.md  token.example.txt
.github/workflows/: rust.yml
libs/greys_macros/: lib.rs  structures.rs  util.rs
src/: event_handler.rs  hooks.rs  main.rs
src/command_macro_lib/: README.md  attributes.rs  lib.rs  structures.rs  util.rs
src/commands/: README.md  admin.rs  driver_control.rs  help.rs  mod.rs  owner.rs  user.rs
src/commands/voice_client_control/: mod.rs  voice_channel.rs
src/db/: mod.rs
src/db/models/: recording.rs
src/voice_handler/: README.md  mod.rs  receive_handler.rs  voice_channel.rs  wav_manager.rs
