[package]
name = "simple-discord-middleware-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.33"
dotenv = "0.15.0"
hound = "3.5.1"
include_optional = "1.0.1"
memory-stats = "1.1.0"
proc-macro2 = "1.0.78"
quote = "1.0.35"
serde = { version = "1.0.195", features = ["derive"] }
serenity = { version = "0.12.0", features = [
	"client",
	"standard_framework",
	"voice",
] }
songbird = { version = "0.4.0", features = ["receive", "full-doc", "native", "driver"] }
syn = { version = "2.0.48", features = ["full"] }
tokio = { version = "1.35.1", features = [
	"macros",
	"process",
	"full",
	"windows-sys",
] }

[profile.release]
opt-level = "z"
codegen-units = 1
strip = "symbols"
panic = "abort"
lto = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[lib]
name = "greys_macros"
path = "src/command_macro_lib/lib.rs"
proc-macro = true
